[workspace]
members = [
    "hermit-abi",
    "hermit-sys",
    "benches/netbench",
    "benches/micro",
    "examples/hello_world",
    "examples/httpd",
    "examples/demo",
#    "examples/tcp_echo",
#    "examples/tcp_server",
#    "examples/mio_tcp_server",
    "examples/webslides",
]
exclude = ["target", "loader", "libhermit-rs"]

[patch.crates-io]
getrandom = { git = "https://github.com/rust-random/getrandom.git" }
rouille = { git = "https://github.com/simonschoening/rouille.git", branch = "hermit"}
tiny_http = { git = "https://github.com/hermitcore/tiny-http.git" }
proc-macro2 = {git = "https://github.com/dtolnay/proc-macro2.git", tag = "1.0.29" }
