[workspace]
members = [
    "hermit-abi",
    "hermit-sys",
    "benches/netbench",
    "benches/micro",
    "examples/hello_world",
    "examples/httpd",
    "examples/demo",
]
exclude = ["target", "loader", "libhermit-rs"]

[patch.crates-io]
num_cpus = { git = "https://github.com/simonschoening/num_cpus.git" }
