[package]
name = "hermit-abi"
version = "0.1.19"
authors = ["Stefan Lankes"]
license = "MIT/Apache-2.0"
readme = "README.md"
edition = "2018"
description = """
hermit-abi is small interface to call functions from the unikernel RustyHermit.
It is used to build the target `x86_64-unknown-hermit`.
"""
repository = "https://github.com/hermitcore/rusty-hermit"
keywords = ["unikernel", "libos"]
categories = ["os"]
documentation = "https://hermitcore.github.io/rusty-hermit/hermit_abi"

[dependencies]
core = { version = "1.0.0", optional = true, package = "rustc-std-workspace-core" }
smoltcp = { version = "0.7.0", optional = true }
compiler_builtins = { version = "0.1", optional = true }
libc = { version = "0.2.51", default-features = false }

[features]
default = ["bindings"]
docs = []
rustc-dep-of-std = ["core", "compiler_builtins/rustc-dep-of-std", "libc/rustc-dep-of-std"]
net = ["smoltcp"] # introduces smoltcp dependency
bindings = [] # only for internal use in hermit-sys or libhermit-rs

[package.metadata.docs.rs]
features = ["docs"]
default-target = "x86_64-unknown-hermit"
